<resources>
    <string name="app_name">smartQuiz</string>
    <string name="question_0">Быть или не быть - вот в чем вопрос?</string>
    <string name="question_1">Любит ли меня моя жена?</string>
    <string name="question_2">Мы рождены для счастья?</string>
    <string name="question_3">Все мы родом из Эфиопии?</string>
    <string name="question_4">Когда мы ковыряемся в носу, мы - Ольга?</string>
    <string name="question_5">Разум когда-нибудь победит?</string>
    <string name="question_6">Найдем ли мы наше предназначенье?</string>


    <string name="btn_true">Да</string>
    <string name="btn_false">Нет</string>
    <string name="btn_next">Следующий вопрос</string>
    <string name="btn_previous">Предыдущий вопрос</string>
    <string name="btn_new_quiz">Новая игра</string>
    <string name="btn_finish">Завершить</string>

    <string name="true_answer">Это ПРАВИЛЬНЫЙ ответ!!!</string>
    <string name="false_answer">Увы, Вы ответили НЕ верно!</string>


    <string name="answer_yes">Правильный ответ - ДА!</string>
    <string name="answer_no">Правильный ответ - НЕТ!</string>



    <string name="warning_message">Вы точно хотите подсмотреть ответ?</string>
    <string name="btn_show_answer">Узнать ответ</string>
    <string name="btn_cheat">Жульничество!</string>
    <string name="reprimand_toast">Подсматривать ответ ПЛОХО!</string>

</resources>